samples/_failures_safe/1761127701_8d5cfd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_34ea4485.c: In function ‘tokenize_string’:
./samples/SAFE/__tmp_34ea4485.c:151:50: error: missing terminating ' character
  151 |                 token.value[MAX_TOKEN_LEN - 1] = '\0
      |                                                  ^~~
./samples/SAFE/__tmp_34ea4485.c:151:17: error: expected expression at end of input
  151 |                 token.value[MAX_TOKEN_LEN - 1] = '\0
      |                 ^~~~~
./samples/SAFE/__tmp_34ea4485.c:151:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_34ea4485.c:151:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_34ea4485.c:151:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_34ea4485.c:151:17: error: expected declaration or statement at end of input
